--- a/contato.html
+++ b/contato.html
@@ -37,6 +37,7 @@
         <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
 
         <button type="submit">Enviar</button>
+        <button type="reset" class="botao">Limpar Campos</button>
       </form>
       <p id="mensagem-status"></p>
     </section>
