--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </ul>
   </nav>
   </header>
-
+  <div class="container">
   <main>
     <div class="carrossel">
       <div class="slides">
@@ -101,7 +101,7 @@
       </iframe>
     </section>
   </main>
-
+  </div>
   <footer>
     <p>&copy; 2025 Gabriel Bortoleto Fanpage | Desenvolvido para fins educacionais</p>
   </footer>
