add barra de progresso de leitura

--- a/kart.html
+++ b/kart.html
@@ -75,5 +75,10 @@
 
   <button id="topo" onclick="voltarTopo()">Topo</button>
   <script src="js/script.js"></script>
+  <div id="container-barra-progresso">
+  <div id="barra-progresso">
+    <img src="imagens/f1_car.png" alt="Carro de F1" id="f1-carro" />
+  </div>
+  </div>
 </body>
 </html>
