Diversos updates e correções

--- a/contato.html
+++ b/contato.html
@@ -6,9 +6,10 @@
     <meta name="description" content="Entre em contato com a fanpage Gabriel Bortoleto">
     <link rel="icon" href="imagens/favicon.ico">
     <title>Gabriel Bortoleto | Contato</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="contato">
   <header>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div> <!-- Ícone hambúrguer -->
   <nav id="menu" class="menu">
@@ -26,6 +27,7 @@
   <main>
     <section class="formulario">
       <h1>Fale conosco</h1>
+      <h3>Entre em contato com a equipe da Fanpage Gabriel Bortoleto</h3>
       <form id="formContato" onsubmit="return validarFormulario()">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required>
