--- a/formula2.html
+++ b/formula2.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Veja a trajetória de Gabriel Bortoleto na Fórmula 2, sua conquista do campeonato de 2024 e os destaques de sua temporada de estreia.">
     <link rel="icon" href="imagens/favicon.ico">
     <title>Gabriel Bortoleto | Fórmula 2</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="f2">
