--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Site dedicado ao piloto brasileiro Gabriel Bortoleto e sua trajetória no automobilismo.">
     <link rel="icon" href="imagens/favicon.ico">
     <title>Gabriel Bortoleto - Home</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="f1">
