--- a/formula3.html
+++ b/formula3.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Gabriel Bortoleto na Fórmula 3">
     <link rel="icon" href="imagens/favicon.ico">
     <title>Gabriel Bortoleto | Fórmula 3</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="f3">
