--- a/formula4.html
+++ b/formula4.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Gabriel Bortoleto na Fórmula 4">
     <link rel="icon" href="imagens/favicon.ico">
     <title>Gabriel Bortoleto | Fórmula 4</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="f4">
