--- a/kart.html
+++ b/kart.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Gabriel Bortoleto no Kart">
     <link rel="icon" href="imagens/favicon.ico">
     <title>Gabriel Bortoleto | Kart</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="kart">
@@ -58,14 +59,6 @@
       <h2>📈 Base sólida para os monopostos</h2>
           <p>O kartismo foi fundamental para o desenvolvimento de Gabriel como piloto. Além da técnica refinada, ele desenvolveu inteligência de corrida, controle de pneus, e a habilidade de trabalhar sob pressão — competências que se refletiriam diretamente em sua rápida adaptação às categorias seguintes, como a Fórmula 4, Fórmula 3 e Fórmula 2.</p>
           <img src="imagens/bortoleto-verstappen-2.jpg" alt="Gabriel Bortoleto e Max Verstappen em 2017 e em 2025" class="imagem-conteudo">
-</section>
-    <section class="video">
-      <h2>Gabriel Bortoleto no kart internacional</h2>
-      <iframe width="100%" height="400" src="https://www.youtube.com/embed/B1EuOpw6W3s" 
-              title="Gabriel Bortoleto kart racing" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-              allowfullscreen>
-      </iframe>
     </section>
   </main>
 
