--- a/formula3.html
+++ b/formula3.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Gabriel Bortoleto na Fórmula 3">
+    <meta name="description" content="Trajetória de Gabriel Bortoleto na Fórmula 3">
+    <meta name="keywords" content="Gabriel Bortoleto, Fórmula 1, Fórmula 2, Fórmula 3, Fórmula 4, automobilismo, piloto brasileiro, F1, F2, F3, F4, Kart">
+    <meta name="author" content="Neto Sbarai">
     <link rel="icon" href="imagens/favicon.ico">
     <title>Gabriel Bortoleto | Fórmula 3</title>
     <link rel="stylesheet" href="css/reset.css">
