--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Entre em contato com a fanpage Gabriel Bortoleto">
+    <meta name="keywords" content="Gabriel Bortoleto, Fórmula 1, Fórmula 2, Fórmula 3, Fórmula 4, automobilismo, piloto brasileiro, F1, F2, F3, F4, Kart">
+    <meta name="author" content="Neto Sbarai">
     <link rel="icon" href="imagens/favicon.ico">
     <title>Gabriel Bortoleto | Contato</title>
     <link rel="stylesheet" href="css/reset.css">
