--- a/formula2.html
+++ b/formula2.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Veja a trajetória de Gabriel Bortoleto na Fórmula 2, sua conquista do campeonato de 2024 e os destaques de sua temporada de estreia.">
+    <meta name="keywords" content="Gabriel Bortoleto, Fórmula 1, Fórmula 2, Fórmula 3, Fórmula 4, automobilismo, piloto brasileiro, F1, F2, F3, F4, Kart">
+    <meta name="author" content="Neto Sbarai">
     <link rel="icon" href="imagens/favicon.ico">
     <title>Gabriel Bortoleto | Fórmula 2</title>
     <link rel="stylesheet" href="css/reset.css">
