--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site dedicado ao piloto brasileiro Gabriel Bortoleto e sua trajetória no automobilismo.">
+    <meta name="keywords" content="Gabriel Bortoleto, Fórmula 1, Fórmula 2, Fórmula 3, Fórmula 4, automobilismo, piloto brasileiro, F1, F2, F3, F4, Kart">
+    <meta name="author" content="Neto Sbarai">
     <link rel="icon" href="imagens/favicon.ico">
-    <title>Gabriel Bortoleto - Home</title>
+    <title>Gabriel Bortoleto - Fórmula 1</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
